I think it last action
Added metrics and mobile version. The code looks terrible, but it works. Maybe I'll fix things later

--- a/photographer/maintest.html
+++ b/photographer/maintest.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- !!!!!!!!!!!!!!!!!!!!НЕ ЗАБЫТЬ ВСТАВИТЬ СТАТИСТИКУ! -->
 <html lang="en">
   <head>
     <script type="text/javascript" >
@@ -21,10 +22,6 @@
     <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
   </head>
   <body>
-    <script type="text/javascript">
-    	if(screen.width<500)
-    	location.href="http://avgustp9.beget.tech/mobile_ver/main_m.html";
-    </script>
 
       <nav>
         <img id='leafs' src="images/leafs.png" alt="leafs" align='middle'>
