--- a/photographer/mobile_ver/cont_m.html
+++ b/photographer/mobile_ver/cont_m.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
-
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="contacts.css">
     <title>Make business card websites for artists, photographers, companies. We can also make a store website, blogs. Low prices, fast execution. Website development. Individual performer, not a group. According to the psd template. Python, CSS, mySQL/PostgreSQL.</title>
+    <link rel="stylesheet" href="cont_m.css">
+    <link rel="shortcut icon" href="../icon.ico" type="image/x-icon">
     <meta name="description" content="Make business card websites for artists, photographers, companies. We can also make a store website, blogs. Low prices, fast execution. Website development. Individual performer, not a group. According to the psd template. Python, CSS, mySQL/PostgreSQL. ">
-    <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
+
   </head>
   <body>
-    <script type="text/javascript">
-    	if(screen.width<500)
-    	location.href="http://avgustp9.beget.tech/mobile_ver/cont_m.html";
-    </script>
     <nav>
-      <img id='leafs' src="images/leafs.png" alt="leafs" align='middle'>
       <h3>Hello there!</h3>
-      <a class="menu" href="main.html">Main page</a>
-      <a class="menu" href="portfolio.html">My gallary / portfolio</a>
+      <a class="menu" href="main_m.html">Main page</a>
+      <a class="menu" href="port_m.html">My gallary / portfolio</a>
       <a class="menu" href="">Contacts</a>
       <p class='menucreator'>Creator<span>:</span> Favn Avgusta<span>,</span> <span>2022</span></p>
     </nav>
-
     <main>
       <div class="info_about">
-        <img class="creator" src="images/creator.jpg" alt="">
+        <img class="creator" src="../images/creator.jpg" alt="">
         <h1>About that site: </h1>
         <p>I did it web-site like a first project. All photos not mine, but this,
           on a pic, its me. A photographer does not exist. I wanted make a site like a part of summary.
@@ -55,8 +49,10 @@
         </ul>
         <p>U can also look my another projects on <a href="https://github.com/AvgustFavn">GITHUB</a> if they are</p>
         <p>I will glad to work with group of ppl, or only me in many projects! Text me or call!</p>
-        <img id="pic_bottom" src="images/photo.png" alt="">
       </section>
     </main>
+
+
+
   </body>
 </html>
