--- a/photographer/mobile_ver/port_m.html
+++ b/photographer/mobile_ver/port_m.html
@@ -2,65 +2,51 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="portfolio.css">
-    <meta name="description" content="Make business card websites for artists, photographers, companies. We can also make a store website, blogs. Low prices, fast execution. Website development. Individual performer, not a group. According to the psd template. Python, CSS, mySQL/PostgreSQL. ">
     <title>Portfolio of photographer</title>
-    <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="port_m.css">
+    <link rel="shortcut icon" href="../icon.ico" type="image/x-icon">
+    <meta name="description" content="Make business card websites for artists, photographers, companies. We can also make a store website, blogs. Low prices, fast execution. Website development. Individual performer, not a group. According to the psd template. Python, CSS, mySQL/PostgreSQL. ">
+
   </head>
   <body>
-    <script type="text/javascript">
-    	if(screen.width<500)
-    	location.href="http://avgustp9.beget.tech/mobile_ver/port_m.html";
-    </script>
-
     <nav>
-      <img id='leafs' src="images/leafs.png" alt="leafs" align='middle'>
       <h3>Hello there!</h3>
-      <a class="menu" href="main.html">Main page</a>
-      <a class="menu">My gallary / portfolio</a>
-      <a class="menu" href="contacts.html">Contacts</a>
+      <a class="menu" href="main_m.html">Main page</a>
+      <a class="menu" href="">My gallary / portfolio</a>
+      <a class="menu" href="cont_m.html">Contacts</a>
       <p id='creator'>Creator<span>:</span> Favn Avgusta<span>,</span> <span>2022</span></p>
     </nav>
 
     <main>
-      <div class="cssSlider">
-      	<ul class="slides">
-      		<li id="slide1"><img src="images/12.jpg" alt="" /></li>
-      		<li id="slide2"><img src="images/13.jpg" alt="" /></li>
-      		<li id="slide3"><img src="images/10.jpg" alt="" /></li>
-      		<li id="slide4"><img src="images/8.jpg" alt="" /></li>
-      		<li id="slide5"><img src="images/14.png" alt="" /></li>
-          <li id="slide6"><img src="images/3.jpeg" alt="" /></li>
-          <li id="slide7"><img src="images/2.png" alt="" /></li>
-      	</ul>
-      	<ul class="thumbnails">
-      		<li><a href="#slide1"><img src="images/12.jpg" /></a></li>
-      		<li><a href="#slide2"><img src="images/13.jpg" /></a></li>
-      		<li><a href="#slide3"><img src="images/10.jpg" /></a></li>
-      		<li><a href="#slide4"><img id="eighth" src="images/8.jpg" /></a></li>
-      		<li><a href="#slide5"><img src="images/14.png" /></a></li>
-          <li><a href="#slide6"><img src="images/3.jpeg" /></a></li>
-          <li><a href="#slide7"><img src="images/2.png" /></a></li>
-      	</ul>
-      </div>
       <section>
         <h2>Notice art in people and streets </h2>
+        <img src="../images/12.jpg" alt="">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <h2>Your brightest features only</h2>
+        <div class="pics_blocks">
+          <img class="pics" src="../images/13.jpg" alt="">
+          <img class="pics" src="../images/10.jpg" alt="">
+          <img class="pics" src="../images/8.jpg" alt="">
+        </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <h2>Time for knowledge of yourself</h2>
+        <div class="pics_blocks">
+          <img class="pics" src="../images/14.png" alt="">
+          <img class="pics" src="../images/3.jpeg" alt="">
+          <img class="pics" src="../images/2.png" alt="">
+        </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <h2>You want it now! </h2>
-        <p>Just check out the <a href="contacts.html">contacts!</a> </p>
+        <p>Just check out the <a href="cont_m.html">contacts!</a> </p>
 
       </section>
     </main>
